force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/cgc_sync__Sync_Mobile_App_Log__c.object-meta.xml
<CustomObject>
    <description>Stores error messages and warning that have occured on the mobile app. They are uploaded every time the mobile app performs an upload to Salesforce.</description>
    <label>Mobile App Log</label>
    <nameField>
        <displayFormat>SMAL-{0000000000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>