force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Details__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Details__c</fullName>
    <description>Link to sync details record.</description>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>