force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Device_Model__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Model__c</fullName>
    <description>Internal model number of the device.</description>
    <label>Device Model</label>
    <length>32</length>
    <type>Text</type>
</CustomField>