force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Device_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_OS_Version__c</fullName>
    <description>Version of the operating system on the device.</description>
    <label>Device OS Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>