force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Device_Platform__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Platform__c</fullName>
    <description>Operating system of the mobile device: Android, iOS, or web browser.</description>
    <label>Device Platform</label>
    <length>10</length>
    <type>Text</type>
</CustomField>