force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__DeviceId__c</fullName>
    <description>The UUID of the client device where the event was submited from.</description>
    <inlineHelpText>The UUID of the client device where the event was submited from.</inlineHelpText>
    <label>Installation Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>