force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Event_Code__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Event_Code__c</fullName>
    <description>Error code.</description>
    <label>Event Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>