force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Generated_At__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Generated_At__c</fullName>
    <description>Stores the date and time of generation.</description>
    <label>Generated At</label>
    <type>DateTime</type>
</CustomField>