force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Length_In_Millis__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Length_In_Millis__c</fullName>
    <description>Stores the time taken in miliseconds.</description>
    <label>Duration [ms]</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>