force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Log_Level__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Log_Level__c</fullName>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>900</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>