force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Message__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Message__c</fullName>
    <description>The error log message. It is usually the error description.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>