force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__Namespace__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Namespace__c</fullName>
    <description>Possible value are:
        FW UI
        FW ENGINE
        SYNC</description>
    <label>Namespace</label>
    <length>32</length>
    <type>Text</type>
</CustomField>