force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/fields/cgc_sync__SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__SubmittedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SF user who&apos;s logged in on the client while the record was submitted to the back-end.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sync_Mobile_App_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>