force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Log__c/listViews/cgc_sync__All.listView-meta.xml
<ListView>
    <fullName>cgc_sync__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>